Errors
<kernel>:1448:1: warning: control may reach end of non-void function
}
^
<kernel>:1486:1: warning: control may reach end of non-void function
}
^
<kernel>:2318:34: error: passing '__attribute__((address_space(16776963))) t_sampler' (aka '__attribute__((address_space(16776963))) struct s_sampler') to parameter of incompatible type 't_sampler *' (aka 'struct s_sampler *')
                float2 sp = sample_unit_square(sampler,
                                               ^~~~~~~
<kernel>:1307:38: note: passing argument to parameter 'sampler' here
float2  sample_unit_square(t_sampler *sampler, __global float2 *samples, uint2 *seed)
                                      ^
<kernel>:3444:17: warning: implicit declaration of function 'random_in_unit_sphere' is invalid in C99
                                                        + 0.3f * random_in_unit_sphere(state);
                                                                 ^

